# learnc

./: README.md
code/basePart/LeiDemo01/: LeiDemo01.sln
code/basePart/LeiDemo01/LeiDemo01/: LeiDemo01.cpp  LeiDemo01.vcxproj  LeiDemo01.vcxproj.filters
code/basePart/Paint/: Paint.sln
code/basePart/Paint/Paint/: Paint.cpp  Paint.vcxproj  Paint.vcxproj.filters
code/basePart/_1_first/: _1_first.sln
code/basePart/_1_first/_1_first/: _1_first.cpp  _1_first.vcxproj  _1_first.vcxproj.filters
code/basePart/cinType/: cinType.sln
code/basePart/cinType/cinType/: cinType.cpp  cinType.vcxproj  cinType.vcxproj.filters
code/basePart/cjichuhuizong/: cjichuhuizong.sln
code/basePart/cjichuhuizong/cjichuhuizong/: all.cpp  cjichuhuizong.vcxproj  cjichuhuizong.vcxproj.filters
code/basePart/classPart/: classPart.sln
code/basePart/classPart/classPart/: All.cpp  Animal.h  Cat.cpp  Cat.h  Friend.h  People.cpp  People.h  classPart.vcxproj  classPart.vcxproj.filters
code/basePart/deviceFunc/: deviceFunc.sln
code/basePart/deviceFunc/deviceFunc/: deviceFunc.cpp  deviceFunc.vcxproj  deviceFunc.vcxproj.filters  mathutils.cpp  mathutils.h
code/basePart/nameLimit/: nameLimit.sln
code/basePart/nameLimit/nameLimit/: nameLimit.cpp  nameLimit.vcxproj  nameLimit.vcxproj.filters
code/basePart/strctDemo/: strctDemo.sln
code/basePart/strctDemo/strctDemo/: strctDemo.cpp  strctDemo.vcxproj  strctDemo.vcxproj.filters
code/basePart/stringDemo/: stringDemo.sln
code/basePart/stringDemo/stringDemo/: stringDemo.cpp  stringDemo.vcxproj  stringDemo.vcxproj.filters
code/basePart/threaddemo/: threaddemo.sln
code/basePart/threaddemo/threaddemo/: threaddemo.cpp  threaddemo.vcxproj  threaddemo.vcxproj.filters
code/basePart/tongxunlu/: tongxunlu.sln
code/basePart/tongxunlu/tongxunlu/: tongxunlu.vcxproj  tongxunlu.vcxproj.filters  txl.cpp
code/basePart/vardemo/: vardemo.sln
code/basePart/vardemo/vardemo/: vardemo.cpp  vardemo.vcxproj  vardemo.vcxproj.filters
code/basePart/yinyong/: yinyong.sln
code/basePart/yinyong/yinyong/: yinyong.cpp  yinyong.vcxproj  yinyong.vcxproj.filters
code/basePart/zimianliang/: zimianliang.sln
code/basePart/zimianliang/zimianliang/: zimianliang.cpp  zimianliang.vcxproj  zimianliang.vcxproj.filters
doc/: 1.基础部分-c++笔记.md  2.进阶部分-c++笔记.md  3.其他部分-c++笔记.md  c++学习笔记.docx
doc/android jni/: 2.jni基础.md
doc/c++doc/: 1.基础部分-c++笔记.md  2.进阶部分-c++笔记.md  3.其他部分-c++笔记.md  4.c++核心 编程.md  复习一：基础复习.md
doc/jni/: 1.jni.md  1.jni笔记.md  11.jni设计概述.md  2.第二章 开始.md  3,基本类型、字符串、数组.md.md
jni_demo/1_NdkDemo/: settings.gradle
jni_demo/1_NdkDemo/app/: build.gradle
jni_demo/1_NdkDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
jni_demo/1_NdkDemo/gradle/wrapper/: gradle-wrapper.properties
jni_demo/2_NdkDemo/: README.md  settings.gradle
jni_demo/2_NdkDemo/app/: build.gradle
jni_demo/2_NdkDemo/gradle/wrapper/: gradle-wrapper.properties
jni_demo/3_NdkDemo/: settings.gradle
jni_demo/3_NdkDemo/app/: build.gradle
jni_demo/3_NdkDemo/gradle/wrapper/: gradle-wrapper.properties
jni_demo/3_NdkDemo/mylibrary/: build.gradle
jni_demo/3_NdkDemo/mylibrary/src/main/cpp/: CMakeLists.txt
jni_demo/3_NdkDemo/mylibrary/src/main/cpp/gperf/: CMakeLists.txt
jni_demo/4_NdkDemo/: settings.gradle
jni_demo/4_NdkDemo/app/: build.gradle
jni_demo/4_NdkDemo/gradle/wrapper/: gradle-wrapper.properties
jni_demo/BlueCHat/: settings.gradle
jni_demo/BlueCHat/app/: build.gradle
jni_demo/BlueCHat/gradle/wrapper/: gradle-wrapper.properties
jni_demo/JniDemo/: settings.gradle
jni_demo/JniDemo/app/: build.gradle
jni_demo/JniDemo/doc/: 1.Jni.开发步骤.md
jni_demo/Learn/app/: build.gradle
jni_demo/_1_jni_demo/: settings.gradle
jni_demo/desktopjni/CMakeDemo01/: CMakeLists.txt
jni_demo/desktopjni/CMakeDemo01/CMakeDemo01/: CMakeDemo01.cpp  CMakeDemo01.h  CMakeLists.txt
jni_demo/desktopjni/desktopjni/: desktopjni.sln
jni_demo/ndkDemo/app/: build.gradle
jni_demo/selfStart/: settings.gradle
jni_demo/selfStart/app/: build.gradle
jni_demo/untitled/doc/: 1.Text.txt
xxx/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  a2_ndkdemo.sln  a2_ndkdemo.vcxproj  a2_ndkdemo.vcxproj.filters  cmake_install.cmake  native-lib.cpp
(+196 files in other folders)
